fixed some z-index issues with the panels

--- a/GeoAngular/app/styles/comp.css
+++ b/GeoAngular/app/styles/comp.css
@@ -105,6 +105,7 @@ html, body {
     bottom: 25px;
     left: auto;
     font-family: oswaldregular;
+    z-index: 2001;
 }
 
 #ThemeSelectorMenu .dropdown-toggle {
