--- a/GeoAngular/app/styles/side-view.css
+++ b/GeoAngular/app/styles/side-view.css
@@ -24,7 +24,7 @@
     bottom: 0px;
     left: 0px;
     background-color: #F2F2F2;
-    z-index: 1001;
+    z-index: 2001;
 }
 .side-view.on {
     left: 0px;
